# dotfiles

./: .gitignore  INSTALL.md  README.md  _config.yml  bootstrap  entangled.toml  flake.nix  justfile  pyproject.toml  readme.md  result  setup  stylua.toml  void-packages
alacritty/: alacritty.yml
assets/keyboard-layouts/: hhkb-base-layer.json  (+5 more)
bootstrap/: install-arch-packages  install-pipx-packages  install.snippet.md  readme.md  set-default-applications  setup-config-links  upgrade-git-origin
bundles/: default.nix  general.nix
cheatsheets/: lvm.md  lvm.org  mitmproxy.md  mitmproxy.org  pacman_mirrors.md  readme.md
dev-shells/: android-emu.nix  android-re.nix  aosp-dev.nix  default.nix  dotfiles-dev.nix  python-venv.nix
dunst/: dunstrc
git/: gitconfig
i3/: config
ideavim/: ideavimrc
kitty/: kitty.conf
launchers/: bg.sh  keyboard-config.sh  lock.sh  polybar.sh
lib/: impurity.nix  utils.nix
mitmproxy/: chooser_custom_alphabet.py  json_viewer.py  transfer_headers.py
mutt/: muttrc
nixpkgs/: home.nix
notes/: keyboard.md  nvim.md  win.md  zsh.md
nvim/: init.vim
overlays/: custom-packages.nix  default.nix
picom/: picom.conf
polybar/: colors.ini  config.ini  modules.ini  user_modules.ini
profiles/: resources
qtile/: autostart  commands.py  config.py  screencast.py  settings.py  theme.py
qutebrowser/: autoconfig.yml  config.py  nord.py  pregenerated.py  quickmarks
rofi/: config.rasi  nord-dmenu.rasi
shell/: profile
templates/: default.nix  flake.nix
tmux/: tmux.conf
x11/: setup  xinitrc  xprofile
zsh/: setup  zshrc
(+395 files in other folders)
