[tool.poetry]
name = "dotfiles"
version = "0.0.0"
description = ""
authors = ["sysraccoon <sysraccoon@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.8.3"
entangled-cli = {git = "https://github.com/sysraccoon/entangled.py.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
